--- a/UIEcomerce/src/app/modules/categories/category-list/category-list.component.html
+++ b/UIEcomerce/src/app/modules/categories/category-list/category-list.component.html
@@ -1,33 +1,18 @@
-<!-- Tabla -->
-<!-- Encabezado -->
-<!-- <div class="bg-indigo-600 rounded-lg  p-6 text-white justify-items-center">
-  <div class="flex items-center">
-    <i class="fas fa-list text-2xl mr-3"></i>
-    <h1 class="text-2xl font-bold">Lista de Categorías</h1>
-  </div>
-   <div class="bg-white/20 p-2 rounded-full">
-      <i class="fas fa-plus text-white"></i>
-  </div>
-</div>
-<div class="flex justify-end">
-  <button type="button" (click)="addCategory()" data-modal-target="popup-modal-category"
-    class="bg-blue-500 hover:bg-blue-700 text-white font-bold   px-4 rounded mt-3 mb-2 py-2">Agregar
-    categoria</button>
-</div> -->
+
 
 <!-- Encabezado con gradiente -->
-        <div class="bg-gradient-to-r rounded-lg from-indigo-600 to-purple-600 p-6 text-white">
-            <div class="flex items-center justify-between">
-                <div class="flex items-center">
-                    <i class="fas fa-tags text-2xl mr-3"></i>
-                    <h1 class="text-2xl font-bold">Lista de Categorías</h1>
-                </div>
-                <div class="bg-white/20 p-2 rounded-full" (click)="showModalCreateCategory('','Agregar')" data-modal-target="popup-modal-category">
-                    <i class="fas fa-plus text-white"></i>
-                </div>
-            </div>
-            <p class="mt-2 text-center  font-bold text-indigo-100">En esta pantalla se va a poder ver todas las categoria diosponible y manipularlas.(Modificar, eliminar y agregar sub categoria)</p>
+<div class="bg-gradient-to-r rounded-lg from-indigo-600 to-purple-600 p-6 text-white">
+    <div class="flex items-center justify-between">
+        <div class="flex items-center">
+            <i class="fas fa-tags text-2xl mr-3"></i>
+            <h1 class="text-2xl font-bold">Lista de Categorías</h1>
         </div>
+        <div class="bg-white/20 p-2 rounded-full" (click)="showModalCreateCategory('','Agregar')" data-modal-target="popup-modal-category">
+            <i class="fas fa-plus text-white"></i>
+        </div>
+    </div>
+    <p class="mt-2 text-center  font-bold text-indigo-100">En esta pantalla se va a poder ver todas las categoria diosponible y manipularlas.(Modificar, eliminar y agregar sub categoria)</p>
+</div>
 
 <div class="bg-white rounded-lg shadow-sm border border-gray-200">
   <div class=" overflow-hidden">
@@ -101,7 +86,7 @@
             <div class="flex justify-center space-x-2">
 
               <button class="text-blue-600 hover:text-blue-900 transition-colors" data-title="Agregar subcategoria"
-                data-modal-target="popup-modal-subcategory" (click)="showModalCreateCategory(category.Id,'Subcategoría',category.Name)">
+                data-modal-target="popup-modal-subcategory" (click)="showModalAddSubCategory(category.Id,category.Name)">
                 <i class="fa fa-plus" aria-hidden="true"></i>
               </button>
               <button
@@ -134,8 +119,13 @@
       </tbody>
     </table>
   </div>
+</div>
 
-  <div id="popup-modal-category" tabindex="-1"
+
+
+<!-- Modal category -->
+
+<div id="popup-modal-category" tabindex="-1"
     class="bg-black bg-opacity-50 w-screen h-screen hidden overflow-y-auto  overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center  md:inset-0  max-h-full">
     <div class="relative p-4 w-full max-h-full items-center justify-center flex">
       <div class="relative bg-white rounded-lg shadow-sm dark:bg-gray-700 lg:w-[43rem] md:w-3/4 sm:w-full">
@@ -187,9 +177,11 @@
         </div>
       </div>
     </div>
-  </div>
+</div>
 
-  <!-- Sub category  -->
+
+<!-- Modal sub category -->
+ <!-- Sub category  -->
     <div id="popup-modal-subcategory" tabindex="-1"
     class="bg-black bg-opacity-50 w-screen h-screen hidden overflow-y-auto  overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center  md:inset-0  max-h-full">
     <div class="relative p-4 w-full max-h-full items-center justify-center flex">
@@ -204,14 +196,9 @@
                         <i class="fas fa-list text-2xl mr-3"></i>
                         <h1 class="text-2xl font-bold">Lista de Sucategorías</h1>
                     </div>
-
-                     <app-madalaction
-                        [msgbody]="msgbody"
-                        [msgheader]="msgheader"
-                        (hidemodalcategory)="hideModalcategory($event)"
-                        (onsubmit)="onAddSubCategory($event)"
-                        (showModal)="showModalCreateSubCategory()"
-                      />
+                <div class="bg-white/20 p-2 rounded-full cursor-pointer"  data-modal-target="popup-modal-add" (click)="showModalCreateSubCategory()">
+                    <i class="fas fa-plus text-white"> </i>
+                </div>
                 </div>
                 <p class="mt-2 text-center  font-bold text-indigo-100">En esta pantalla se va a poder ver todas las subcategoria disponible y manipularlas.(Modificar, eliminar y agregar sub categoria)</p>
             </div>
@@ -286,19 +273,19 @@
                       <td class="px-6 py-4 text-right text-sm font-medium">
                         <div class="flex justify-center space-x-2">
 
-                          <button class="text-blue-600 hover:text-blue-900 transition-colors" data-title="Agregar subcategoria"
-                            data-modal-target="popup-modal-subcategory" (click)="showModalCreateCategory(subcategory.Id,'Subcategoría')">
+                          <!-- <button *ngIf="isEnablePlus" class="text-blue-600 hover:text-blue-900 transition-colors" data-title="Agregar subcategoria"
+                            data-modal-target="popup-modal-subcategory" (showModal)="showModalCreateSubCategory(subcategory.Id)">
                             <i class="fa fa-plus" aria-hidden="true"></i>
-                          </button>
+                          </button> -->
                           <button
                                 class="text-blue-600 hover:text-blue-900 transition-colors"
-                                data-title="Editar"  data-modal-target="popup-modal-category" (click)="showModalCreateCategory(subcategory.Id,'Editar')"
+                                data-title="Editar"  data-modal-target="popup-modal-category" (click)="showModalCreateSubCategory(subcategory.Id)"
                               >
                                 <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                   <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M11 5H6a2 2 0 00-2 2v11a2 2 0 002 2h11a2 2 0 002-2v-5m-1.414-9.414a2 2 0 112.828 2.828L11.828 15H9v-2.828l8.586-8.586z"/>
                                 </svg>
                               </button>
-                          <button (click)="showAlert(subcategory.Id)" class="text-red-600 hover:text-red-900 transition-colors"
+                          <button (click)="showAlertSub(subcategory.Id)" class="text-red-600 hover:text-red-900 transition-colors"
                             data-title="Eliminar">
                             <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -320,6 +307,61 @@
             </div>
               </div>
 
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Add and Update -->
+   <div id="popup-modal-add" tabindex="-1"
+    class="bg-black bg-opacity-50 w-screen h-screen hidden overflow-y-auto  overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center  md:inset-0  max-h-full">
+    <div class="relative p-4 w-full max-h-full items-center justify-center flex">
+      <div class="relative bg-white rounded-lg shadow-sm dark:bg-gray-700 lg:w-[43rem] md:w-3/4 sm:w-full">
+
+        <div class="p-4 md:p-5 text-center">
+          <hr>
+          <form action="" class="flex flex-col justify-between h-full" [formGroup]="frmsubForm" class="form"
+            (ngSubmit)="onAddSubCategory()">
+
+            <div class="bg-indigo-600 p-6 text-white justify-items-center">
+              <div class="flex items-center">
+                <i class="fas fa-list text-2xl mr-3"></i>
+                <h1 class="text-2xl font-bold">{{ msgheader }}</h1>
+              </div>
+              <p class="mt-2 text-indigo-100">{{ msgbody }}</p>
+            </div>
+            <input type="text" name="Id" hidden readonly id="Id">
+
+            <div class="form-section mb-1">
+            </div>
+            <div class="md:col-span-5">
+              <label class="flex" for="Name">Nombre <p class="text-red-500">*</p></label>
+              <input type="text" name="Name" id="Name" formControlName="Name"
+                class="h-10 border mt-1 rounded px-4 w-full bg-gray-50" value="" placeholder="Nombre de la categoria" />
+              <div *ngIf="frmForm.get('Name')?.touched && frmForm.get('Name')?.invalid"
+                class="text-lg text-red-700 p-2 mt-1">
+                <div *ngIf="frmForm.get('Name')?.errors?.['required']">Nombre requerido</div>
+              </div>
+            </div>
+
+            <div class="md:col-span-5">
+              <label class="flex" for="Description">Descripcion</label>
+              <textarea type="text" name="Description" id="Name" formControlName="Description"
+                class="resize-none border mt-1 rounded px-4 w-full h-52 bg-gray-50" value="" placeholder="Ingresa la descripcion" >
+              </textarea>
+            </div>
+            <div
+              class="justify-end p-4 border-t border-gray-200 rounded-b-lg flex items-center space-x-2 dark:border-gray-600">
+              <button (click)="hideModalcategory('popup-modal-add')" data-modal-hide="popup-modal-category" type="button"
+                class="py-2.5 px-5 ms-3 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-100 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700">
+                cancel
+              </button>
+              <button data-modal-hide="popup-modal-category" type="submit"
+                class="text-white bg-purple-600 hover:bg-purple-900 focus:ring-4 focus:outline-none focus:ring-red-300 dark:focus:ring-red-800 font-medium rounded-lg text-sm inline-flex items-center px-5 py-2.5 text-center">
+                Aceptar
+              </button>
+            </div>
+          </form>
         </div>
       </div>
     </div>
